2010-06-23  Dirk Eddelbuettel  <edd@debian.org>

	* src/*: Converted remainder of code to new Rcpp API

2010-06-20  Dirk Eddelbuettel  <edd@debian.org>

	* R/calendar.R: New helper function setCalendarContext()
	setting calendar, fixingDays and settleDate
	* src/calendar.cpp: Implementation, setting RQLContext
	* R/setCalendarContext.Rd: Documentation

	* src/bermudan.cpp: take calendar info from RQLContext
	* src/discount.cpp: idem
	* src/utils.cpp: idem

	* src/*.cpp: Some minor cleanup and reindentation,
	  ensure Settings::instance().evaluationDate() is set

2010-06-19  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: Converted to new API

	* src/utils.cpp: Factored-out utility functions from bonds.cpp
	* src/rquantlib.hpp: Declarations for new utility functions
	* src/bonds.cpp: Some refactoring

2010-06-18  Dirk Eddelbuettel  <edd@debian.org>

	* src/bonds.cpp: Converted to new API

2010-06-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/curves.cpp: Converted to new API
	* src/discount.cpp: Idem
	* src/hullwhite.cpp: Idem
	* src/bermudan.cpp: Idem

2010-06-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp: Added simple getOptionType() helper
	* src/rquantlib.hpp: Added simple getOptionType() helper definition
	* src/*cpp: Use getOptionType()

	* src/asian.cpp: Converted to new API
	* src/barrier_binary.cpp: Idem
	* src/implieds.cpp: Idem
	* src/cbond.cpp: Idem
	* src/daycounter.cpp: Idem
	* src/zero.cpp: Idem

2010-06-15  Dirk Eddelbuettel  <edd@debian.org>

	* src/vanilla.cpp: Converted to new API

2010-06-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: Yet more simplification from "new" Rcpp API
	* R/calendars.R: Simpler too as we get simpler result objects back

2010-06-12  Dirk Eddelbuettel  <edd@debian.org>

	* src/calendars.cpp: More code simplification using "new" Rcpp API

	* src/utils.cpp: Add Brazil + South Korea to getCalendar()
	* src/calendars.cpp: Move getCalendar() into this file
